33.About two dozen thief skills have been finished and assigned to various classes. Skill_EscapeBonds renamed to Struggle Bonds.
34.Potions and Pills are more scaled to their levels.
35.Normally mobile mobs will walk by hidden/invis exits now (unless they can see hidden, etc..)
36.Death room (DEATH) coffeemud.ini entry now supports MORGUE to keep players where they died.
37.(Internal) Expertises have been optimized such that players only store the highest version.  Functionally identical, but with new editor expression.
38.Clans and Governments now support categories, scripts, and visibility flags, and mobs may belong to more than one, if setup properly. 
39.New INI entries: MAXCLANCATS and PUBLICCLANCATS for controlling player access to clan gvts by category
40.Player passwords can now be optionally hashed into the DB -- see HASHPASSWORDS in coffeemud.ini
41.If you've been having MXP problems with ZMUD/CMUD or Siplet, those problems are over.
42.New private Government type (Profession) for class clans.  Make sure you add CLASSCLAN to the new MAXCLANCATS ini entry.
43.PlayerClass (the class used when you disable CLASSES) now uses a programmatically defined skill tree.
# Build 5.8.0 Release ?/?/2013
1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
^^^Check out the altered WebServer guide, and make sure you integrate the pub.ini, admin.ini, and common.ini if you customized them.
2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
4. Changed the wysiwyg forum editor to one that's also chrome compatible (nicEdit)
5. Generic Abilities will now import/export when races that use them export
6. (Internal) New factions now default into /resources/factions -- legacy locations will work too though.