@@ -1103,13 +1103,14 @@ LISTFILE=/resources/lists.ini
 # Other flags include EXECUTIONS, LOGINS, LOGOFFS, BIRTHS, MARRIAGES, 
 # DIVORCES, CHRISTENINGS, LEVELS, DETAILEDLEVELS, DEATHS, DETAILEDDEATHS,
 # CONQUESTS, CONCEPTIONS, NEWPLAYERS, LOSTLEVELS, PLAYERPURGES, CLANINFO,
-# WARRANTS, or the names of any colors to override the default
+# WARRANTS, ACCOUNTOOC, or the names of any colors to override the default
 # All of the above flags cause those events to be automatically
 # broadcast on the given channel.
 CHANNELS=\
 	GOSSIP,\
 	GRATZ,\
 	CHAT,\
+    OOC ACCOUNTOOC,\
 	QUESTCHAT PLAYERREADONLY, \
 	WIZ +SYSOP -NAMES, \
 	CLANTALK CLANONLY CLANINFO CONQUESTS LOGINS LOGOFFS, \
